# NHA-4-266

./: .gitignore  README (1).md  README.md  gitignore.txt  inference.py  pyproject.toml  script.py
FrontEnd/: .gitignore  README.md
FrontEnd/av-detection-dashboard/: package-lock.json  tailwind.config.js  vite.config.js
FrontEnd/av-detection-dashboard/src/: App.jsx
FrontEnd/av-detection-dashboard/src/components/: ControlPanel.jsx  TelemetrySidebar.jsx  VideoPlayer.jsx
FrontEnd/av-detection-dashboard/src/hooks/: useCamera.js
FrontEnd/av-detection-dashboard/src/services/: apiService.js
Inference/: inference.py  pyproject.toml
av-detection-dashboard/: .env.example  index.html  package.json
av-detection-dashboard/src/: index.css
av-detection-dashboard/src/hooks/: useInferencePipeline.js
av-detection-dashboard/src/services/: apiService.js
data preprocessing/: data.yaml  data_prep.py
depi_back-main/: .gitattributes  .gitignore  Dockerfile  README.md  app.py  gitignore.txt  pyproject.toml  requirements.txt
depi_back-main/app/: cv_model.py  main.py
depi_back-main/app/api/: main.py
depi_back-main/app/api/routes/: camera.py  predict.py  video.py
depi_back-main/app/core/: config.py
depi_back-main/app/services/: cv_service.py
depi_back-main/docs/: frontend_integration.md
depi_back-main/templates/: index.html
final_training/: args.yaml  script.py
final_training/Graphs/: results.csv
